tests/functional/lang/parse-fail/unexpected-then.err.exp
error: syntax error, unexpected 'then'
       at «stdin»:1:4:
            1| if then
             |    ^
            2|
